添加预定车位，暂未完成